Fixed overflow-x to be hidden on link-wrapper

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@
   grid-template-columns: 1fr 1fr 10% 15%;
   transition: 0.15s ease all;
   grid-column-gap: 0.2rem;
+  filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.274));
 }
 .link:hover {
   background-color: rgba(0, 0, 0, 0.356);
@@ -38,7 +39,8 @@
 #link-wrapper{
   width: 100%;
   height: 80vh;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 #filter__wrapper {
   margin-top: 1rem;
